2018-06-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor release

	* src/example1.cpp (arrayEx): Minor update from upstream to suppress
	a compiler warning about potentially unintialzed object

	* src/rcppmsgpack_c_functions.cpp (unpackVector): Change several
	indices to unsigned int, and parentheses to two logical expressions

2018-06-21  Travers Ching  <traversc@gmail.com>

	* src/rcppmsgpack_c_functions.cpp: Adding msgpack_read and
	msgpack_write plus other small improvements
	* R/functions.R: Idem
	* man/msgpack_read.Rd: Documentation
	* man/msgpack_write.Rd: Idem
	* tests/tests.r: New tests

2018-05-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.2

	* inst/include/msgpack/v1/object.hpp (<<): Carry over a static_cast<>
	from upstream to suppress a new warning from g++-8.1 [CRAN request]

2018-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.1

	* inst/COPYRIGHTS (Copyright): Added two entries [CRAN request]
	* inst/AUTHORS: Also added here

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/rcppmsgpack_c_functions.cpp (c_timestamp_encode): Make
	Windows happy and use uint32_t here as well

	* inst/include/msgpack/v1/adaptor/array_ref.hpp (msgpack): Do not
	use #pragma to silence compiler as this makes CRAN very unhappy
        * inst/include/msgpack/v1/adaptor/boost/optional.hpp: Idem
        * inst/include/msgpack/v1/adaptor/map.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector_char.hpp: Idem
        * inst/include/msgpack/v1/adaptor/vector_unsigned_char.hpp: Idem
        * inst/include/msgpack/v2/x3_parse.hpp: Idem

2018-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tests.r: Use all.equal for comparison of packed & unpacked
	timestamp as timestamp resolution not as fine as identical

	* src/rcppmsgpack_c_functions.cpp: Use unsigned int to suppress